# autograd-cpp

./: .gitignore  CMakeLists.txt  FUTURE.md  README.md  test_weibull_nll.cpp
cmake/: autograd_cppConfig.cmake.in
examples/: CMakeLists.txt  exponential_bootstrap.cpp  exponential_mle.cpp  hessian_demo.cpp  hessian_simple.cpp  linear_regression.cpp  logistic_regression.cpp  simple_gradients.cpp  weibull_mle_simple.cpp
examples/nn/: rnn_adding_problem.cpp  rnn_sine_wave.cpp  rnn_text_generation.cpp
include/autograd/: autograd.hpp  hessian.hpp  jacobian.hpp  ops.hpp  optim.hpp  tensor.hpp
include/nn/: nn.hpp  nn_all.hpp
include/nn/attention/: scaled_dot_product.hpp
include/nn/core/: module.hpp
include/nn/recurrent/: lstm.hpp  rnn.hpp  rnn_base.hpp
include/statmodels/: base.hpp  bootstrap.hpp  exponential.hpp  optimizer.hpp  weibull.hpp
include/statmodels/base/: distribution.hpp  regression.hpp
include/statmodels/distributions/: exponential.hpp  weibull.hpp
include/statmodels/inference/: bootstrap.hpp  empirical_distribution.hpp
include/statmodels/optimization/: optimizer.hpp
include/statmodels/regression/: glm.hpp  linear_regression.hpp  logistic_regression.hpp
include/tokenizers/base/: tokenizer.hpp
src/: tensor.cpp
tests/: CMakeLists.txt  test_helpers.hpp  test_hessian.cpp  test_jacobian.cpp  test_main.cpp  test_ops.cpp  test_optim.cpp  test_tensor.cpp
